# emp-m2pc

./: .gitignore  CMakeLists.txt  emp-m2pc.vcxproj
bench/: bench_mal2pc.h  mal2pc-comb.cpp  mal2pc.cpp  mal2pc_other.cpp  mal_decompose.cpp  ot_xor_tree.cpp  xor-tree.cpp
emp-m2pc/: malicious.h  xor_tree_naive.h
malicious/: malicious.h
test/: all.cpp  emp-m2pc-tests.vcxproj  mal.cpp
